--- a/assets/Css/main.css
+++ b/assets/Css/main.css
@@ -5,15 +5,56 @@
     padding:  15px  32px ;
     color:white;
     background-color: #FF6636;
+    
     border:none;
 }
-.navbar{
+.navbar1{
     z-index: 10;
 }
 .navbar-nav .nav-link.active{
     text-decoration: 2px overline #FF6636;
     color:white;
 }
+/*nav 2 start */
+.navbar2{
+    padding:16px 0px;
+}
+form{
+    border:1px solid #E9EAF0;
+    background-color: #FFFFFF;
+    border-radius: 2px;
+    width:424px;
+}
+.form-control{
+    border:none;
+    color:#E9EAF0;
+}
+.nav-start{
+    gap:16px;
+}
+.custom-nav2btn{
+    background-color: #FFEEE8;
+    color:var(--main-color);
+    border:none;
+    padding:  15px  32px ;
+    
+
+}
+ .navbar2 .dropdown, .dropdown-center, .dropend, .dropstart, .dropup, .dropup-center {
+    padding: 8px 0;
+    border:1px solid #E9EAF0;
+    border-radius: 2px;
+    background-color: #FFFFFF;
+
+}
+.nav-end{
+    gap:12px;
+}
+.nav-end .icon{
+    gap:24px;
+}
+/*nav2 end*/
+/*hero section start */
 .hero-info {
 gap:40px;
 }
