--- a/assets/Css/about.css
+++ b/assets/Css/about.css
@@ -63,6 +63,12 @@
     padding: 9px;
     flex-direction: column;
 
+}}
+/*gallery section start*/
+.gallery{
+    background-color: #F5F7FA;
 }
-
+.gallery .container.row{
+    gap:10px;
+    padding: 5px;
 }
