--- a/assets/Css/about.css
+++ b/assets/Css/about.css
@@ -72,3 +72,29 @@
     gap:10px;
     padding: 5px;
 }
+/*opinion section start*/
+.opinion .card{
+    border:none;
+    padding: 3px;
+background-color: #F5F7FA;
+}
+.opinion .card p{
+height: 100px;
+}
+.opinion .card img{
+    width:48px;
+    height: 48px;
+}
+/*opinion section media query start */
+@media screen and (min-width:1000px) and (max-width:1200px){
+
+  .opinion .row{
+    display: flex;
+    gap:20px;
+    flex-direction: column;
+  }  
+
+  .opinion .card p{
+height: 230px;
+}
+}
